--- a/wercker.yml
+++ b/wercker.yml
@@ -26,6 +26,11 @@ push-release:
         ports: 8080
         cmd: sh target/bin/start
 
+#Deploy our container from the Oracle Container Registry to the Oracle Container Engine (Kubernetes)
+deploy-to-cluster:
+box:
+id: alpine
+cmd: /bin/sh
 steps:
 
 - bash-template
