--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -14,6 +14,7 @@ spec:
       labels:
         app: twitter-feed
         commit: ${WERCKER_GIT_COMMIT}
+        color: blue
     spec:
       containers:
       - name: twitter-feed
@@ -23,6 +24,17 @@ spec:
         - name: twitter-feed
           containerPort: 8080
           protocol: TCP
+        volumeMounts:
+            - name: podinfo
+              mountPath: /tmp
+              readOnly: false
+      volumes:
+        - name: podinfo
+          downwardAPI:
+            items:
+            - path: "labels"
+              fieldRef:
+                fieldPath: metadata.labels          
       imagePullSecrets:
         - name: wercker
 ---
@@ -38,6 +50,7 @@ spec:
   - port: 30000
     targetPort: 8080
   selector:
+    color: blue
     app: twitter-feed
   type: ClusterIP
 ---
