--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: twitter-feed-v1
+  name: twitter-feed-v2
   labels:
     commit: ${WERCKER_GIT_COMMIT}
 spec:
@@ -14,6 +14,7 @@ spec:
       labels:
         app: twitter-feed
         commit: ${WERCKER_GIT_COMMIT}
+        color: green
     spec:
       containers:
       - name: twitter-feed
@@ -23,9 +24,20 @@ spec:
         - name: twitter-feed
           containerPort: 8080
           protocol: TCP
+        volumeMounts:
+          - name: podinfo
+            mountPath: /tmp
+            readOnly: false
+      volumes:
+        - name: podinfo
+          downwardAPI:
+            items:
+            - path: "labels"
+              fieldRef:
+                fieldPath: metadata.labels
       imagePullSecrets:
         - name: wercker
---- 
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -39,5 +51,6 @@ spec:
     targetPort: 8080
   selector:
     app: twitter-feed
+    color: green
   type: ClusterIP
 ---
